--- a/index.html
+++ b/index.html
@@ -1,7 +1,15 @@
 <!DOCTYPE html>
-<html>
+<html lang="es_ES">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="icon" href="/favicon.ico" type="image/x-icon">
+<title>G-Choco</title>
+</head>
+
 <body>
-<h1>Hello World</h1>
-<p>G-Choco is on route!</p>
+Chocolate is comming !
+
 </body>
+
 </html>
